--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
         <div class="bgImg">  
             <div class="topContainer">
                 <nav> 
-                    <a href="contact.html">Contact</a> 
+                    <a href="contact.html">Contacts</a> 
                     <a href="login.html">Login</a>
                     <a href="about.html">About Us</a>    
                     <a href="home.html">Home</a> 
