changed variable names from 'login' --> register

--- a/register.html
+++ b/register.html
@@ -20,8 +20,8 @@
     </head>
     
     <body>
-        <div class="loginContainer">
-            <div class ="loginInnerCard">
+        <div class="registrationContainer">
+            <div class ="registrationInnerCard">
                 <form>
                     <h2>Contact Information</h2>
                     <label for="fname">First Name:</label>
