--- a/register.html
+++ b/register.html
@@ -71,7 +71,8 @@
                     <input type="text">
                     <br><br>
 
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit"><br>
+                    <a href="login.html">Already have an account?</a>
                 </form>
             </div>
         </div>
