--- a/about.html
+++ b/about.html
@@ -5,21 +5,33 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>About</title>
         <meta name="description" content="Home page for Website">
-        <link rel="stylesheet" href="style.css">
-        
-        <div class="topContainer">
+        <link rel="stylesheet" href="style_aboutus.css">
+    </head>
+    <body>   
+        <header>
+        <div class="topContainer_about">
             <nav> 
-                <a href="contact.html">Contact</a> 
-                <a href="login.html">Login</a>
-                <a href="about.html">About Us</a>    
-                <a href="home.html">Home</a> 
+                <ul> 
+                <li><a href="home.html">Home</a> </li>
+                </ul>
             </nav>     
         </div>
-    </head>
-    
-    <body>
+    </header>
+        <div class="heading">
+            <h1>About this site.</h1>
+        </div>
         <div class="text">
-            <p>This is the About Us page.</p>
+            <p>I own a musket for home defense, since that's what the founding fathers intended. 
+                Four ruffians break into my house. "What the devil?" As I grab my 
+                powdered wig and Kentucky rifle. Blow a golf ball sized hole through 
+                the first man, he's dead on the spot. Draw my pistol on the second man, miss him entirely
+                 because it's smoothbore and nails the neighbors dog. I have to resort to the cannon mounted at the top of the 
+                 stairs loaded with grape shot, "Tally ho lads" the grape shot shreds two men in the blast, the sound and extra 
+                 shrapnel set off car alarms. Fix bayonet and charge the last terrified rapscallion. He Bleeds out waiting on the 
+                 police to arrive since triangular bayonet wounds are impossible to stitch up. Just as the founding fathers intended.</p>
+        </div>
+        <div class="bottomContainer_about">
+            <p>                          </p>
         </div>
     </body>
 </html>
