Completed-#LI-38 :CSS for home page matches mockup

--- a/home.html
+++ b/home.html
@@ -6,16 +6,20 @@
         <title>Titan Finder Index Page</title>
         <meta name="description" content="Home page for Website">
         <link rel="stylesheet" href="style.css">
-        <div class="bgImg">  
-            <div class="topContainer">
-                <nav> 
-                    <a href="contact.html">Contacts</a> 
-                    <a href="login.html">Login</a>
-                    <a href="about.html">About Us</a>    
-                    <a href="home.html">Home</a> 
-                </nav>     
+        <div class="bgImg">
+        <div class="topContainer">
+            <div class="topnav"> 
+                <a href="contact.html">Contact</a> 
+                <a href="login.html">Login</a>
+                <a href="about.html">About Us</a>    
+                <a href="home.html">Home</a> 
+            </div>     
+        </div>
+            <div class="homeImageText">
+                <img class="logo" src="images/titanLogoTemp.png">
+                <h1 class="homeHeader">Local Business Solutions.</h1>
+                <button class="helpButton" type="button">Find Help</button>
             </div>
-                <h1>Local Business Solutions</h1>
         </div>
         
     </head>
@@ -102,6 +106,31 @@
                 <p>General oil and gas field facility maintenance.
                 </p>
             </div>
+        </div>
+    </div>
+
+    <div class="reviewText">
+        <h2>OUR CUSTOMERS HAVE SPOKEN</h2>
+        <h3>Why They Trust Us</h3>
+    </div>
+
+    <div class="reviewCards">
+        <div class="indvReviewCard">
+            <img src="images/quoteIcon.png">
+            <h2>These guys are the best</h2>
+            <p>EXAMPLE COMPANY, FILLER, NAME HERE AT RANCHO CUCAMONGA</p>
+        </div>
+
+        <div class="indvReviewCard">
+            <img src="images/quoteIcon.png">
+            <h2>These guys are the best for real!</h2>
+            <p>EXAMPLE COMPANY, FILLER, NAME HERE AT RANCHO CUCAMONGA</p>
+        </div>
+
+        <div class="indvReviewCard">
+            <img src="images/quoteIcon.png">
+            <h2>These guys are the best for real no skeezy respectfully!</h2>
+            <p>EXAMPLE COMPANY, FILLER, NAME HERE AT RANCHO CUCAMONGA</p>
         </div>
     </div>
         
