--- a/login.html
+++ b/login.html
@@ -20,6 +20,7 @@
     <body>
         <div class="text">
             <p>This is the Login page.</p>
+            <a href="register.html">Register</a>
         </div>
     </body>
 </html>
