--- a/register.html
+++ b/register.html
@@ -6,17 +6,15 @@
         <title>Login</title>
         <meta name="description" content="Login page for Website">
         <link rel="stylesheet" href="style.css">
-        <div class="bgImg"> 
             <div class="topContainer">
                 <nav> 
-                    <a href="contact.html">Contacts</a> 
+                    <a href="contact.html">Contact</a> 
                     <a href="login.html">Login</a>
                     <a href="about.html">About Us</a>    
                     <a href="home.html">Home</a> 
                 </nav>     
             </div>
             <h1>Local Business Solutions</h1>
-        </div>
     </head>
     
     <body>
