Small adjustments for page consistency

--- a/login.html
+++ b/login.html
@@ -6,24 +6,18 @@
         <title>Login</title>
         <meta name="description" content="Home page for Website">
         <link rel="stylesheet" href="style.css">
-        <div class="bgImg">  
-            <div class="topContainer">
-                <nav> 
-                    <a href="contact.html">Contacts</a> 
-                    <a href="login.html">Login</a>
-                    <a href="about.html">About Us</a>    
-                    <a href="home.html">Home</a> 
-                </nav>     
-            </div>
-                <h1>Local Business Solutions</h1>
+        <div class="topContainer">
+            <nav> 
+                <a href="contact.html">Contact</a> 
+                <a href="login.html">Login</a>
+                <a href="about.html">About Us</a>    
+                <a href="home.html">Home</a> 
+            </nav>     
         </div>
-        
     </head>
     
     <body>
         <div class="text">
-            <p>This is the Login page.</p>
-            <a href="register.html">Register</a>
         <div class="loginContainer">
             <div class="registrationInnerCard">
                 <form>
