--- a/about.html
+++ b/about.html
@@ -12,13 +12,17 @@
         <div class="topContainer_about">
             <nav> 
                 <ul> 
+                    <a href="contact.html">Contact</a> 
+                    <a href="login.html">Login</a>
+                    <a href="about.html">About Us</a> 
                 <li><a href="home.html">Home</a> </li>
                 </ul>
             </nav>     
         </div>
     </header>
+
         <div class="heading">
-            <h1>About this site.</h1>
+            <h1>About This Site</h1>
         </div>
         <div class="text">
             <p>I own a musket for home defense, since that's what the founding fathers intended. 
