Added logo to pages-link back to landing/home page

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,10 @@
     <title>Contact</title>
     <meta name="description" content="Home page for Website">
     <link rel="stylesheet" href="style.css">
-
+	
+	<a class="homeImage" href="home.html">
+		<img class="pageLogo" src="images/titanLogoTemp.png"> 
+	</a>
     <div class="topContainer">
         <nav>
             <a href="contact.html">Contact</a>
