--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
             <div class="homeImageText">
                 <img class="logo" src="images/titanLogoTemp.png">
                 <h1 class="homeHeader">Local Business Solutions.</h1>
-                <button class="helpButton" type="button">Find Help</button>
+                <a class ="helpButton" href="register.html" target="_blank">Find Help</a>
             </div>
         </div>
         
