--- a/register.html
+++ b/register.html
@@ -6,15 +6,18 @@
         <title>Login</title>
         <meta name="description" content="Login page for Website">
         <link rel="stylesheet" href="style.css">
+        <a class="homeImage" href="home.html">
+            <img class="pageLogo" src="images/titanLogoTemp.png"> 
+        </a>
             <div class="topContainer">
                 <nav> 
                     <a href="contact.html">Contact</a> 
                     <a href="login.html">Login</a>
                     <a href="about.html">About Us</a>    
                     <a href="home.html">Home</a> 
-                </nav>     
+                </nav> 
+
             </div>
-            <h1>Local Business Solutions</h1>
     </head>
     
     <body>
