--- a/login.html
+++ b/login.html
@@ -6,6 +6,9 @@
         <title>Login</title>
         <meta name="description" content="Home page for Website">
         <link rel="stylesheet" href="style.css">
+        <a class="homeImage" href="home.html">
+            <img class="pageLogo" src="images/titanLogoTemp.png"> 
+        </a>
         <div class="topContainer">
             <nav> 
                 <a href="contact.html">Contact</a> 
