--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Contact</title>
     <meta name="description" content="Home page for Website">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_contact.css">
 	
-	<a class="homeImage" href="home.html">
+	<div class="topContainer_contact">
+		<div class="Image">
+		<a href="home.html">
 		<img class="pageLogo" src="images/titanLogoTemp.png"> 
-	</a>
-    <div class="topContainer">
+		</a>
+		</div>
         <nav>
-            <a href="contact.html">Contact</a>
-            <a href="login.html">Login</a>
-            <a href="about.html">About Us</a>
-            <a href="home.html">Home</a>
+            <ul>
+                <li></li><a href="contact.html">Contact</a></li>
+                <li></li><a href="login.html">Login</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="home.html">Home</a> </li>
+            </ul>
         </nav>
     </div>
     <style>
@@ -81,6 +85,9 @@
         <input type="submit" value="Submit">
 
     </form>
+	<div class="bottomContainer_contact">
+        <p>                          </p>
+    </div>
 </div>
 </body>
 </html>
