Completed About Us page with updated styling

--- a/about.html
+++ b/about.html
@@ -6,36 +6,43 @@
         <title>About</title>
         <meta name="description" content="Home page for Website">
         <link rel="stylesheet" href="style_aboutus.css">
-    </head>
-    <body>   
-        <header>
+        
         <div class="topContainer_about">
             <nav> 
-                <ul> 
-                    <a href="contact.html">Contact</a> 
-                    <a href="login.html">Login</a>
-                    <a href="about.html">About Us</a> 
-                <li><a href="home.html">Home</a> </li>
-                </ul>
+                <a href="contact.html">Contact</a> 
+                <a href="login.html">Login</a>
+                <a href="about.html">About Us</a>    
+                <a href="home.html">Home</a> 
             </nav>     
         </div>
-    </header>
+    </head>
 
-        <div class="heading">
-            <h1>About This Site</h1>
-        </div>
-        <div class="text">
-            <p>I own a musket for home defense, since that's what the founding fathers intended. 
-                Four ruffians break into my house. "What the devil?" As I grab my 
-                powdered wig and Kentucky rifle. Blow a golf ball sized hole through 
-                the first man, he's dead on the spot. Draw my pistol on the second man, miss him entirely
-                 because it's smoothbore and nails the neighbors dog. I have to resort to the cannon mounted at the top of the 
-                 stairs loaded with grape shot, "Tally ho lads" the grape shot shreds two men in the blast, the sound and extra 
-                 shrapnel set off car alarms. Fix bayonet and charge the last terrified rapscallion. He Bleeds out waiting on the 
-                 police to arrive since triangular bayonet wounds are impossible to stitch up. Just as the founding fathers intended.</p>
-        </div>
+    <div class = "heading">
+        <h1>Titan Finder Wyoming</h1>
+        <h4>Local Business Solutions</h4>
+    </div>
+
+    <section class="about-us">
+        <img src="images/about-Image.jpeg">
+        <div class ="content">
+        <h1>Our Mission</h1>
+        <p>Titan Finder aims to provide independant contractors a 
+            platform to seek job opportunitues in the Wyoming area. Our goal is to connect
+            skilled professionals with businesses and organizations in need of their expertise.
+            We pride ourselves on our commitment to helping workers succeed. Our team of experienced
+            professionals is dedicated to providing top-notch service and support to all of our users. Whether
+            you're a seasoned contractor looking to expand your client base, or a new professional just starting out, 
+            our website offers a range of job opportunities to fit your needs.
+        </p>
+            <button onclick="window.location.href='contact.html';" class="contact-button">
+                Contact Us
+            </button>
+            </div>
+    </section>
+    
+    <body>
         <div class="bottomContainer_about">
-            <p>                          </p>
-        </div>
+            <p></p>
+        </div>      
     </body>
 </html>
