linked pages together, added logo to nav for pages

--- a/about.html
+++ b/about.html
@@ -8,9 +8,14 @@
         <link rel="stylesheet" href="style_aboutus.css">
         
         <div class="topContainer_about">
+            <div class="Image">
+                <a href="home.html">
+                <img class="pageLogo" src="images/titanLogoTemp.png"> 
+                </a>
+            </div>
             <nav> 
                 <a href="contact.html">Contact</a> 
-                <a href="login.html">Login</a>
+                <a href="login+\login.html">Login</a>
                 <a href="about.html">About Us</a>    
                 <a href="home.html">Home</a> 
             </nav>     
