--- a/login+/login.html
+++ b/login+/login.html
@@ -8,7 +8,7 @@
 </head><body id="html_body" data-lbl-working="Mhm..." class="default home"><form method="post" action="./" id="form1"></div>
 <div class="contentWrapper"><div class="sitePage"><link href="bootstrap3.css" rel="stylesheet" type="text/css" /><link href="site.css" rel="stylesheet" type="text/css" /><link href="https://d37954ngf2f9cv.cloudfront.net/00001/fontawesome/css/light.min.css?10847617381=1" type="text/css" rel="stylesheet" ></link><div class="site-page-top-row"><div class="content-width"><div class="site-page-top-row-content"><div class="right-aligned-items"><div class="container-fluid"><div class="row"><div class="col-sm-12"><div class="top-links"></div><div class="userinfo-container"><div class='userBox'></div>
 </div></div></div></div></div></div></div></div>
-<div class="site-page-navigation-container"><div class="content-width"><style>.mag-navbarmenu{--mag-navbar-height:90px;}</style><div class='mag-navbarmenu'><a href="/home" class="site-logo-img navbar-inline-logo"><img src="Home.png" itemprop="logo" alt="Logo" style="width:auto; background-image:none;" ></img></a><div class='navbar-show-logo'></div>
+<div class="site-page-navigation-container"><div class="content-width"><style>.mag-navbarmenu{--mag-navbar-height:90px;}</style><div class='mag-navbarmenu'><a href="..\home.html" class="site-logo-img navbar-inline-logo"><img src="Home.png" itemprop="logo" alt="Logo" style="width:auto; background-image:none;" ></img></a><div class='navbar-show-logo'></div>
 </div></div></div>
 <div class="siteBodyContainer"><div class="siteBody"><link href="site.css" rel="stylesheet" type="text/css" /><div data-valmsg-summary="true" class="validation-summary-valid container-fluid"><ul></ul></div><div class="home-page-login-container"><div class="login-container"><style>
     .external-login-panel { padding-top:15px; }
@@ -21,9 +21,9 @@
 <div class="col-xs-6 nopadding"><div class="checkbox nomargin"><label><input type="checkbox" data-role="none" name="RememberMe" tabindex="4" /> Remember Me
                             </label></div></div><div class="col-xs-6 right nopadding"><a class="forgot-pw-link actionLink" href="/user/forgotpassword" tabindex="5">Forgot your password</a></div></div></div>
 							<div class="horizontalLine" style="margin-bottom:30px;"></div>
-							<div class="signupBox"><h4>New User?</h4><div style="margin-top:10px;"><a class="btn btn-primary btn-lg btnOrange btn-block btnLogin cancel" data-theme="b" href="/user/register" tabindex="6">Sign Up</a></div></div>
+							<div class="signupBox"><h4>New User?</h4><div style="margin-top:10px;"><a class="btn btn-primary btn-lg btnOrange btn-block btnLogin cancel" data-theme="b" href="..\register.html" tabindex="6">Sign Up</a></div></div>
 							<hr class="login-line-sep" data-title="OR" />
-							<div class="external-login-item"><a href="/user/register_c" style="margin-right:6px;" class='btn btn-default btn-lg btnOrange btn-block btnLogin cancel'><i class="glyphicon glyphicon-lock"></i> Register as a contractor
+							<div class="external-login-item"><a href="..\register.html" style="margin-right:6px;" class='btn btn-default btn-lg btnOrange btn-block btnLogin cancel'><i class="glyphicon glyphicon-lock"></i> Register as a contractor
                             </a></div></div></div></div></div></div></div></div><script>
     </script></div></div></div><script>
     $(function() {
