--- a/contact.html
+++ b/contact.html
@@ -9,14 +9,14 @@
 	
 	<div class="topContainer_contact">
 		<div class="Image">
-		<a href="home.html">
+			<a href="home.html">
 		<img class="pageLogo" src="images/titanLogoTemp.png"> 
 		</a>
 		</div>
         <nav>
             <ul>
                 <li></li><a href="contact.html">Contact</a></li>
-                <li></li><a href="login.html">Login</a></li>
+                <li></li><a href="login+\login.html">Login</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="home.html">Home</a> </li>
             </ul>
