--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
         <div class="topContainer">
             <div class="topnav"> 
                 <a href="contact.html">Contact</a> 
-                <a href="login.html">Login</a>
+                <a href="login+\login.html">Login</a>
                 <a href="about.html">About Us</a>    
                 <a href="home.html">Home</a> 
             </div>     
