--- a/register.html
+++ b/register.html
@@ -12,7 +12,7 @@
             <div class="topContainer">
                 <nav> 
                     <a href="contact.html">Contact</a> 
-                    <a href="login.html">Login</a>
+                    <a href="login+\login.html">Login</a>
                     <a href="about.html">About Us</a>    
                     <a href="home.html">Home</a> 
                 </nav> 
@@ -73,7 +73,7 @@
                     <br><br>
 
                     <input type="submit" value="Submit"><br>
-                    <a href="login.html">Already have an account?</a>
+                    <a href="login+\login.html">Already have an account?</a>
                 </form>
             </div>
         </div>
