--- a/login+/login.html
+++ b/login+/login.html
@@ -8,7 +8,7 @@
 </head><body id="html_body" data-lbl-working="Mhm..." class="default home"><form method="post" action="./" id="form1"></div>
 <div class="contentWrapper"><div class="sitePage"><link href="bootstrap3.css" rel="stylesheet" type="text/css" /><link href="site.css" rel="stylesheet" type="text/css" /><link href="https://d37954ngf2f9cv.cloudfront.net/00001/fontawesome/css/light.min.css?10847617381=1" type="text/css" rel="stylesheet" ></link><div class="site-page-top-row"><div class="content-width"><div class="site-page-top-row-content"><div class="right-aligned-items"><div class="container-fluid"><div class="row"><div class="col-sm-12"><div class="top-links"></div><div class="userinfo-container"><div class='userBox'></div>
 </div></div></div></div></div></div></div></div>
-<div class="site-page-navigation-container"><div class="content-width"><style>.mag-navbarmenu{--mag-navbar-height:90px;}</style><div class='mag-navbarmenu'><a href="..\home.html" class="site-logo-img navbar-inline-logo"><img src="Home.png" itemprop="logo" alt="Logo" style="width:auto; background-image:none;" ></img></a><div class='navbar-show-logo'></div>
+<div class="site-page-navigation-container"><div class="content-width"><style>.mag-navbarmenu{--mag-navbar-height:90px;}</style><div class='mag-navbarmenu'><a href="..\home.html" class="site-logo-img navbar-inline-logo"><img src="..\images\Home.png" itemprop="logo" alt="Logo" style="width:auto; background-image:none;" ></img></a><div class='navbar-show-logo'></div>
 </div></div></div>
 <div class="siteBodyContainer"><div class="siteBody"><link href="site.css" rel="stylesheet" type="text/css" /><div data-valmsg-summary="true" class="validation-summary-valid container-fluid"><ul></ul></div><div class="home-page-login-container"><div class="login-container"><style>
     .external-login-panel { padding-top:15px; }
@@ -30,11 +30,11 @@
         $(".glyphicon-play-button").hide();
     })
 </script><div class="footer-wrap"><div class="content-width"><div class="container-fluid"><div class="row center"><div class="col-md-3">
-<div class="footer-logo left"><a href="https://titan307.com/team/"><img src="TitanLogo4Real.png" itemprop="logo" alt="Logo" style="width:auto; background-image:none;" ></img></a></div>
+<div class="footer-logo left"><a href="https://titan307.com/team/"><img src="..\images\TitanLogo4Real.png" itemprop="logo" alt="Logo" style="width:auto; background-image:none;" ></img></a></div>
 </div><div class="col-md-6"><div class="link"><div class="site-footer"><div class="footerLinks-actions"><div class="about"><span>
 <a href="/home/privacy" class="sitefooter-link-item" rel="nofollow" target="_top">Privacy &amp; Security Statement</a>
 <a href="/home/terms" class="sitefooter-link-item" rel="nofollow" target="_top">Terms &amp; Conditions</a></span></div>
-<a href="/home/about" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a></span> </div></div></div></div><div class="col-md-3"><div </div>
+<a href="..\about.html" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a></span> </div></div></div></div><div class="col-md-3"><div></div>
 <script type="text/javascript">
 
 //not yet
