--- a/register.html
+++ b/register.html
@@ -3,21 +3,24 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Login</title>
+        <title>Register | Titan Finder </title>
         <meta name="description" content="Login page for Website">
         <link rel="stylesheet" href="style.css">
-        <a class="homeImage" href="home.html">
-            <img class="pageLogo" src="images/titanLogoTemp.png"> 
-        </a>
-            <div class="topContainer">
-                <nav> 
-                    <a href="contact.html">Contact</a> 
-                    <a href="login+\login.html">Login</a>
-                    <a href="about.html">About Us</a>    
-                    <a href="home.html">Home</a> 
-                </nav> 
+        <link href="login+\bootstrap3.css" rel="stylesheet" type="text/css">
 
+        <div class="topContainer">
+            <div class="Image">
+                <a href="home.html">
+                    <img class="pageLogo" src="images/titanLogoTemp.png"> 
+                </a>
             </div>
+            <nav> 
+                <a href="contact.html">Contact</a> 
+                <a href="login+\login.html">Login</a>
+                <a href="about.html">About Us</a>    
+                <a href="home.html">Home</a> 
+            </nav>     
+        </div>
     </head>
     
     <body>
@@ -77,5 +80,34 @@
                 </form>
             </div>
         </div>
+
+        <div class="footer-wrap">
+            <div class="content-width">
+                <div class="container-fluid">
+                    <div class="row center">
+                        <div class="col-md-3">
+                            <div class="footer-logo left">
+                                <a href="https://titan307.com/team/">
+                                    <img src="images/TitanLogo4Real.png" itemprop="logo" alt="Logo" style="width:auto; background-image:none;" ></img>
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6"><div class="link">
+                            <div class="site-footer">
+                                <div class="footerLinks-actions">
+                                    <div class="about">
+                                        <span>
+                                            <a href="/home/privacy" class="sitefooter-link-item" rel="nofollow" target="_top">Privacy &amp; Security Statement</a>
+                                            <a href="/home/terms" class="sitefooter-link-item" rel="nofollow" target="_top">Terms &amp; Conditions</a>
+                                        </span>
+                                    </div>
+                                        <a href="about.html" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                <div class="col-md-3"><div></div>
+        <script type="text/javascript"></script>
     </body>
 </html>
