--- a/home.html
+++ b/home.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Titan Finder Index Page</title>
+        <title>Home | Titan Finder </title>
         <meta name="description" content="Home page for Website">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="homeStyle.css">
+        <link href="login+\bootstrap3.css" rel="stylesheet" type="text/css">
         <div class="bgImg">
         <div class="topContainer">
             <div class="topnav"> 
@@ -133,6 +134,35 @@
             <p>EXAMPLE COMPANY, FILLER, NAME HERE AT RANCHO CUCAMONGA</p>
         </div>
     </div>
+
+<div class="footer-wrap">
+    <div class="content-width">
+        <div class="container-fluid">
+            <div class="row center">
+                <div class="col-md-3">
+                    <div class="footer-logo left">
+                        <a href="https://titan307.com/team/">
+                            <img src="images/TitanLogo4Real.png" itemprop="logo" alt="Logo" style="width:auto; background-image:none;" ></img>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-6"><div class="link">
+                    <div class="site-footer">
+                        <div class="footerLinks-actions">
+                            <div class="about">
+                                <span>
+                                    <a href="/home/privacy" class="sitefooter-link-item" rel="nofollow" target="_top">Privacy &amp; Security Statement</a>
+                                    <a href="/home/terms" class="sitefooter-link-item" rel="nofollow" target="_top">Terms &amp; Conditions</a>
+                                </span>
+                            </div>
+                                <a href="about.html" class="sitefooter-link-item" rel="nofollow" target="_top">About our service</a>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        <div class="col-md-3"><div></div>
+<script type="text/javascript"></script>
         
     </body>
 </html>
