Basic dashboard formatting and CSS

--- a/dashboard/contractorDashboard.html
+++ b/dashboard/contractorDashboard.html
@@ -5,9 +5,26 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title> Dashboard | Titan Finder </title>
         <meta name="description" content="Contractor Dashboard">
+        <link rel="stylesheet" href="conDash.css">
     </head>
         
     <body>
+        <div class="containerBig">
+            <div class="containerCard">
+                <div class="card">
+                    <h2>My Profile</h2>
+                </div>
+                <div class="card">
+                    <h2>Quick Search</h2>
+                </div>
+                <div class="card">
+                    <h2>Messages</h2>
+                </div>
+            </div>
+            <div class="bigBox">
+                <h2>Create Post</h2>
+            </div>
+        </div>
 
     </body>
 </html>
