#LI-56 Cont. Dash, Conbined and matches admin dash

--- a/dashboard/AdminDashboard.html
+++ b/dashboard/AdminDashboard.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title> Dashboard | Titan Finder </title>
         <meta name="description" content="Admin Dashboard">
-        <link rel="stylesheet" href="adminDash.css">
+        <link rel="stylesheet" href="conDash.css">
     </head>
         
     <body>
