--- a/dashboard/contractorDashboard.html
+++ b/dashboard/contractorDashboard.html
@@ -13,16 +13,22 @@
             <div class="containerCard">
                 <div class="card">
                     <h2>My Profile</h2>
+                    <a href="">Contact Info<br></a>
+                    <a href="">Company Info</a>
                 </div>
                 <div class="card">
                     <h2>Quick Search</h2>
+                    <a href="">Search Matches</a>
                 </div>
                 <div class="card">
                     <h2>Messages</h2>
+                    <a href="">Inbox<br></a>
+                    <a href="">Send a Message</a>
                 </div>
             </div>
             <div class="bigBox">
                 <h2>Create Post</h2>
+                <a href="">Form to create a new job post</a>
             </div>
         </div>
 
