#LI-63 Integrated dashboard and updated forms

--- a/workRequest.html
+++ b/workRequest.html
@@ -27,7 +27,8 @@
         <div class="registrationContainer">
             <div class ="registrationInnerCard">
                 <form>
-                    <h2>Work Request Form</h2>
+                    <fieldset class="fieldSet">
+                    <legend class="title">Work Request Form</legend>
                     <label for="fname">First Name:</label>
                     <input type="text"><br>
 
@@ -62,7 +63,7 @@
                         <option value="stateFour">Four</option>
                     </select><br><br>
 
-                    <h2>Work Information</h2>
+                    <h2 class="title">Work Information</h2>
                     <label for="registrationType">Registration Type:</label>
                     <select id="regType" name="regType">
                         <option value="regTypeOne">One</option>
@@ -79,7 +80,7 @@
                     <br>
 
                     <input type="submit" value="Submit"><br>
-                    <a href="login+\login.html">Already have an account?</a>
+                </fieldset>
                 </form>
             </div>
         </div>
