--- a/dashboard/clientDashboard.html
+++ b/dashboard/clientDashboard.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <title> Client Dash </title>
-    <link rel="stylesheet" href="clientDash.css">
-    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title> Dashboard | Titan Finder </title>
+        <meta name="description" content="Client Dashboard">
+        <link rel="stylesheet" href="conDash.css">
+        <link rel="stylesheet" href="clientDash.css">
+        <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   </head>
-<body>
+    </head>
+    <body>
+<header>
   <div class="sidebar">
     <div class="logo-details">
         <div class="logo_name">Titan Finder</div>
@@ -75,10 +79,31 @@
      </li>
     </ul>
   </div>
-  <section class="home-section">
-      <div class="text">Dashboard</div>
-  </section>
+</header>
 
+<div class="containerBig">
+  <div class="containerCard">
+      <div class="card">
+          <h2>My Profile</h2>
+          <a href="">Contact Info<br></a>
+          <a href="">Company Info</a>
+      </div>
+      <div class="card">
+          <h2>Quick Search</h2>
+          <a href="">Search Matches</a>
+      </div>
+      <div class="card">
+          <h2>Messages</h2>
+          <a href="">Inbox<br></a>
+          <a href="">Send a Message</a>
+      </div>
+  </div>
+  <div class="bigBox">
+      <h2>Create Post</h2>
+      <a href="../workRequest.html">Form to create a new job post</a>
+  
+  </div>
+</div>
   <script>
   let sidebar = document.querySelector(".sidebar");
   let closeBtn = document.querySelector("#btn");
