--- a/register.html
+++ b/register.html
@@ -27,7 +27,8 @@
         <div class="registrationContainer">
             <div class ="registrationInnerCard">
                 <form>
-                    <h2>Contact Information</h2>
+                    <fieldset class="fieldSet">
+                    <legend class="title">Contact Information</legend>
                     <label for="fname">First Name:</label>
                     <input type="text"><br>
 
@@ -62,7 +63,7 @@
                         <option value="stateFour">Four</option>
                     </select><br><br>
 
-                    <h2>Registration Information</h2>
+                    <h2 class="title">Registration Information</h2>
                     <label for="registrationType">Registration Type:</label>
                     <select id="regType" name="regType">
                         <option value="regTypeOne">One</option>
@@ -77,6 +78,7 @@
 
                     <input type="submit" value="Submit"><br>
                     <a href="login+\login.html">Already have an account?</a>
+                </fieldset>
                 </form>
             </div>
         </div>
