LI-69 Contractor Dash iframes go to pages

--- a/dashboard/dashboardInnerMain.html
+++ b/dashboard/dashboardInnerMain.html
@@ -18,17 +18,17 @@
             </div>
              <div class="card">
                 <h2>Quick Search</h2>
-                <a href="">Search Matches</a>
+                <a href="viewMatched.html" id="buttonClick" onclick="changeParentToIframe('dashboard/viewMatched.html')">Search Matches</a>
             </div>
             <div class="card">
                 <h2>Messages</h2>
-                <a href="">Inbox<br></a>
-                <a href="">Send a Message</a>
+                <a href="viewMessages.html" id="buttonClick" onclick="changeParentToIframe('dashboard/viewMessages.html')">Inbox<br></a>
+                <a href="viewMessages.html" id="buttonClick" onclick="changeParentToIframe('dashboard/viewMessgaes.html')">Send a Message</a>
             </div>
         </div>
         <div class="bigBoxContractor">
             <h2>New Jobs</h2>
-            <a href="">Express Interest</a>
+            <a href="viewJobs.html" id="buttonClick" onclick="changeParentToIframe('dashboard/viewJobs.html')">Express Interest</a>
         </div>
         
         <script type="text/javascript" src="script.js">
