#LI 78 and 79 Profile Widget - View and Edit Info

--- a/dashboard/dashboardInnerMain_Client.html
+++ b/dashboard/dashboardInnerMain_Client.html
@@ -27,9 +27,9 @@
                 <a href="viewMessages.html" id="buttonClick" onclick="changeParentToIframe('dashboard/viewMessgaes.html')">Send a Message</a>
             </div>
         </div>
-        <div class="bigBoxContractor">
-            <h2>New Jobs</h2>
-            <a href="viewJobs.html" id="buttonClick" onclick="changeParentToIframe('dashboard/viewJobs.html')">Express Interest</a>
+        <div class="bigBox">
+            <h2>Request Work</h2>
+            <a href="workRequest.html" id="buttonClick" onclick="changeParentToIframe('workRequest.html')">Submit A Work Request</a>
         </div>
     </body>
 </html>
