--- a/dashboard/clientDashboard.html
+++ b/dashboard/clientDashboard.html
@@ -5,7 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title> Dashboard | Titan Finder </title>
         <meta name="description" content="Client Dashboard">
-        <link rel="stylesheet" href="conDash.css">
         <link rel="stylesheet" href="clientDash.css">
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -81,29 +80,10 @@
   </div>
 </header>
 
-<div class="containerBig">
-  <div class="containerCard">
-      <div class="card">
-          <h2>My Profile</h2>
-          <a href="">Contact Info<br></a>
-          <a href="">Company Info</a>
-      </div>
-      <div class="card">
-          <h2>Quick Search</h2>
-          <a href="">Search Matches</a>
-      </div>
-      <div class="card">
-          <h2>Messages</h2>
-          <a href="">Inbox<br></a>
-          <a href="">Send a Message</a>
-      </div>
-  </div>
-  <div class="bigBox">
-      <h2>Create Post</h2>
-      <a href="../workRequest.html">Form to create a new job post</a>
-  
-  </div>
+<div class="containerBig" id="containerBig">
+  <iframe src="dashboardInnerMain_Client.html" title="Main" id="webpage"></iframe>
 </div>
+
   <script>
   let sidebar = document.querySelector(".sidebar");
   let closeBtn = document.querySelector("#btn");
@@ -114,12 +94,35 @@
   });
 
   function menuBtnChange() {
-   if(sidebar.classList.contains("open")){
+    if(sidebar.classList.contains("open")){
      closeBtn.classList.replace("bx-menu", "bx-menu-alt-right");
    }else {
      closeBtn.classList.replace("bx-menu-alt-right","bx-menu");
    }
   }
+  function changeParentIframe(source){
+    document.getElementById('webpage').src = source;
+  }
+    const nodeText = "johnDoe";
+    const iframe = document.getElementById('webpage');
+    iframe.src = 'dashboardInnerMain_Client.html';
+
+    function sendNodeTextToIframe() {
+        console.log('Sending nodeText to iframe:', nodeText);
+        iframe.contentWindow.postMessage(
+          { action: 'receiveJsonFilePath', data: nodeText },
+          '*'
+         );
+      }
+
+        iframe.addEventListener('load', sendNodeTextToIframe);
+
+        window.addEventListener('message', (event) => {
+          if (event.source === iframe.contentWindow) {
+            const { action, data } = event.data;
+            if (action === 'passJsonFilePath') {}
+          }
+        }); 
   </script>
 </body>
 </html>
