--- a/dashboard/contractorDashboard.html
+++ b/dashboard/contractorDashboard.html
@@ -5,7 +5,6 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title> Dashboard | Titan Finder </title>
         <meta name="description" content="Contractor Dashboard">
-      <!--  <link rel="stylesheet" href="conDash.css"> -->
      <link rel="stylesheet" href="clientDash.css"> 
         <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
       </head>
@@ -19,7 +18,7 @@
               </div>
               <ul class="nav-list">
                 <li>
-                  <a href="home.html">
+                  <a href="../home.html">
                     <i class='bx bx-home'></i>
                     <span class="links_name">Home</span>
                   </a>
